[package]
name = "sitting-solver"
version = "0.1.0"
authors = ["Mark Barbone <mark.l.barbone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[dependencies]
indexmap = "1.6.2"
tinyvec = { version = "1.1.1", features = ["alloc"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
